fixing for mobile

--- a/characters/index.html
+++ b/characters/index.html
@@ -33,8 +33,8 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./WR.png" class="d-block vh-100" alt="W.R.">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="./WR.png" class="vh-100" alt="W.R.">
+                <div class="carousel-caption">
                     <h5>W.R.</h5>
                     <p>W.R. is the classic rakish rogue (roguish rake?), they exude a not unpleasant sneakiness in any time period. Given a
                         choice, they choose chaos. Given no choice, they still chooses chaos.</p>
@@ -51,8 +51,8 @@ cook enough to share <-WR-----------------> buy every meal
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./ND.png" class="d-block vh-100" alt="N.D.">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="./ND.png" class="vh-100" alt="N.D.">
+                <div class="carousel-caption">
                     <h5>N.D.</h5>
                     <p>N.D. is cute in any era.  They are careful without being too cautious, and organized without being fastidious.</p>
                     <p class="past">Nicholas Drayton</p>
@@ -68,8 +68,8 @@ cook enough to share <----------ND--------> buy every meal
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./MT.png" class="d-block vh-100" alt="M.T.">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="./MT.png" class="vh-100" alt="M.T.">
+                <div class="carousel-caption">
                     <h5>M.T.</h5>
                     <p>M.T. is a self assured powerhouse.  Recharged by adventure, they rarely rest.  M.T. is always taking on the next... challenge... while never volunteering much about the last.</p>
                     <p class="past">Margaret Ashford</p>
@@ -85,8 +85,8 @@ cook enough to share <-------------MT-----> buy every meal
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./LR.png" class="d-block vh-100" alt="L.R.">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="./LR.png" class="vh-100" alt="L.R.">
+                <div class="carousel-caption">
                     <h5>L.R.</h5>
                     <p>L.R. is the nerd's nerd.  Always ready with an impassioned speech about nearly any topic, their mind is organized and sharp as a tack.</p>
                     <p class="past">Luciana Reyes</p>
@@ -102,8 +102,8 @@ cook enough to share <----------------LR--> buy every meal
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./BA.png" class="d-block vh-100" alt="B.A.">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="./BA.png" class="vh-100" alt="B.A.">
+                <div class="carousel-caption">
                     <h5>B.A.</h5>
                     <p>B.A. is a selfless nurturing soul.  Not 'mothering' as in 50s housewife.  'Mothering' as in they're a mama bear mixed with a biker mixed with a combat medic.</p>
                     <p class="past">Batbayarii AltanSetseg</p>
