--- a/characters/index.html
+++ b/characters/index.html
@@ -37,7 +37,7 @@
                 <div class="carousel-caption">
                     <h5>W.R.</h5>
                     <p>W.R. is the classic rakish rogue (roguish rake?), they exude a not unpleasant sneakiness in any time period. Given a
-                        choice, they choose chaos. Given no choice, they still chooses chaos.</p>
+                        choice, they choose chaos. Given no choice, they still choose chaos.</p>
                     <p class="past">William Redbrook</p>
                     <p class="present">Billie Rochelle-Ross</p>
                     <p class="future">Redd WILL</p>
