--- a/Brainstorm_dump/story/story_files/TextAdventureGame.html
+++ b/Brainstorm_dump/story/story_files/TextAdventureGame.html
@@ -16,21 +16,32 @@
 [[This is a choice.  It goes to a passage with this title.]]
 
 This is a choice that goes to a passage with a different title
-[[OtherChoice]]</tw-passagedata><tw-passagedata pid="2" name="Batbayarii AltanSetseg" tags="" position="1500,900" size="100,100"></tw-passagedata><tw-passagedata pid="3" name="Fidget for a moment, putting off the tasks of the day" tags="" position="1000,1100" size="100,100"></tw-passagedata><tw-passagedata pid="4" name="Finish getting ready and eat some breakfast" tags="" position="500,750" size="100,100">You fuel your day, not really paying attention to your nourishment, just mindlessly consuming your morning&#39;s energy.  You gulp down a few good mouthfuls of bad coffee and [[head to work.]]</tw-passagedata><tw-passagedata pid="5" name="Focus on getting to the days work." tags="" position="675,1000" size="100,100">[[Press 13]]</tw-passagedata><tw-passagedata pid="6" name="Go back to bed" tags="" position="300,350" size="100,100">You roll over, fold your pillow in half, hunker under your blanket, and try to recapture the magic of unconciousness.  Your fear begins to rise as you breathe slowly for an eternal five minutes, but you realize your thoughts are wandering.  You dream of a party you never attended.  Unfamiliar faces loom in and out of shadow, costumed waitstaff bringing drinks or food depending on when you look at them.  A celebra-- JANGLEJANGLEJANGLEDING.  JANGLEJANGLEJANGLEDING.
+[[OtherChoice]]
+background: spr_background</tw-passagedata><tw-passagedata pid="2" name="Fidget for a moment, putting off the tasks of the day" tags="" position="1000,1100" size="100,100">
+background: spr_background</tw-passagedata><tw-passagedata pid="3" name="Finish getting ready and eat some breakfast" tags="" position="500,750" size="100,100">You fuel your day, not really paying attention to your nourishment, just mindlessly consuming your morning&#39;s energy.  You gulp down a few good mouthfuls of bad coffee and [[head to work.]]
+background: spr_background</tw-passagedata><tw-passagedata pid="4" name="Focus on getting to the days work." tags="" position="675,1000" size="100,100">[[Press 13]]
+background: spr_background</tw-passagedata><tw-passagedata pid="5" name="Go back to bed" tags="" position="300,350" size="100,100">You roll over, fold your pillow in half, hunker under your blanket, and try to recapture the magic of unconciousness.  Your fear begins to rise as you breathe slowly for an eternal five minutes, but you realize your thoughts are wandering.  You dream of a party you never attended.  Unfamiliar faces loom in and out of shadow, costumed waitstaff bringing drinks or food depending on when you look at them.  A celebra-- JANGLEJANGLEJANGLEDING.  JANGLEJANGLEJANGLEDING.
 
-[[Your alarm wakes you]]</tw-passagedata><tw-passagedata pid="7" name="Grab a banana" tags="" position="325,1225" size="100,100">{gain a banana} This will bring a longing no food could fill closer to comfort.  You make a mental note to wrap the banana&#39;s peel in newspaper before throwing it out.  Your keen nose will be distracted all day if you don&#39;t.
+[[Your alarm wakes you]]
+background: spr_background</tw-passagedata><tw-passagedata pid="6" name="Grab a banana" tags="" position="325,1225" size="100,100">{gain a banana} This will bring a longing no food could fill closer to comfort.  You make a mental note to wrap the banana&#39;s peel in newspaper before throwing it out.  Your keen nose will be distracted all day if you don&#39;t.
 
 Take your banana back to the elevator and 
 
 [[Press R]]
 
-[[Press 13]]</tw-passagedata><tw-passagedata pid="8" name="Grab a gooey cinnamon bun" tags="" position="450,1325" size="100,100">{gain cinnamon bun}  This treat will hserve as external courage to face the day&#39;s work tasks.  You silently thank yourself for the private washroom in your new offices as you notice the small package smearing sugary deliciousness on your pinkie.  Stepping back into the empty elevator, you 
+[[Press 13]]
+background: spr_background</tw-passagedata><tw-passagedata pid="7" name="Grab a gooey cinnamon bun" tags="" position="450,1325" size="100,100">{gain cinnamon bun}  This treat will hserve as external courage to face the day&#39;s work tasks.  You silently thank yourself for the private washroom in your new offices as you notice the small package smearing sugary deliciousness on your pinkie.  Stepping back into the empty elevator, you 
 
 [[Press R]]
 
-[[Press 13]]</tw-passagedata><tw-passagedata pid="9" name="Immediately get to work" tags="" position="1000,950" size="100,100"></tw-passagedata><tw-passagedata pid="10" name="Investigate the shiny object you notice out of the corner of your eye?" tags="" position="950,750" size="100,100">You pause for a moment, happy for an excuse to put off the day&#39;s work.  You reach down for the scuffed metal object, notice it&#39;s a large brass key.  The antique object is worn to brushed shininess in two places.  The part where...  Is it suddenly really warm?  The part where it would be held, and the whatever, the blade of the key is old timey and why is it hard to see and think of word for th wher
+[[Press 13]]
+background: spr_background</tw-passagedata><tw-passagedata pid="8" name="Immediately get to work" tags="" position="1000,950" size="100,100">
+background: spr_background</tw-passagedata><tw-passagedata pid="9" name="Investigate the shiny object you notice out of the corner of your eye?" tags="" position="950,750" size="100,100">You pause for a moment, happy for an excuse to put off the day&#39;s work.  You reach down for the scuffed metal object, notice it&#39;s a large brass key.  The antique object is worn to brushed shininess in two places.  The part where...  Is it suddenly really warm?  The part where it would be held, and the whatever, the blade of the key is old timey and why is it hard to see and think of word for th wher
 
-[[Pass out]]</tw-passagedata><tw-passagedata pid="11" name="Luciana Reyes" tags="" position="1500,800" size="100,100"></tw-passagedata><tw-passagedata pid="12" name="Margaret Ashford" tags="" position="1500,700" size="100,100"></tw-passagedata><tw-passagedata pid="13" name="Nicholas Drayton" tags="" position="1500,600" size="100,100"></tw-passagedata><tw-passagedata pid="14" name="Opening scene" tags="" position="300,200" size="100,100">It&#39;s too early.  It&#39;s dark and it&#39;s quiet and it&#39;s warm but it&#39;s too early.  Your muffled thoughts slowly resolve themselves into enough clarity to question how long you have left... before your alarm.
+[[Pass out]]
+background: spr_background</tw-passagedata><tw-passagedata pid="10" name="Margaret Ashford" tags="" position="1500,700" size="100,100">
+background: spr_background</tw-passagedata><tw-passagedata pid="11" name="Nicholas Drayton" tags="" position="1500,600" size="100,100">
+background: spr_background</tw-passagedata><tw-passagedata pid="12" name="Opening scene" tags="" position="300,200" size="100,100">It&#39;s too early.  It&#39;s dark and it&#39;s quiet and it&#39;s warm but it&#39;s too early.  Your muffled thoughts slowly resolve themselves into enough clarity to question how long you have left... before your alarm.
 
 Too long.
 
@@ -38,17 +49,16 @@ It&#39;s too early.
 
 [[Go back to bed]]
 
-[[Take advantage of the extra... ugh... hour]]</tw-passagedata><tw-passagedata pid="15" name="OtherChoice" tags="" position="175,200" size="100,100">[[Opening scene]]</tw-passagedata><tw-passagedata pid="16" name="Pass out" tags="" position="1300,625" size="100,100">Your thoughts swirl half formed.  Maybe you hear shouting.  Maybe it&#39;s your mind trying to make sense of the rushing sound in your ears on the edge of intelligibility.  You think of faces half seen during your day.  The roar gets louder and you find yourself face to face with
+[[Take advantage of the extra... ugh... hour]]
+background: spr_background</tw-passagedata><tw-passagedata pid="13" name="OtherChoice" tags="" position="175,200" size="100,100">[[Opening scene]]
+background: spr_background</tw-passagedata><tw-passagedata pid="14" name="Pass out" tags="" position="1300,625" size="100,100">Your thoughts swirl half formed.  Maybe you hear shouting.  Maybe it&#39;s your mind trying to make sense of the rushing sound in your ears on the edge of intelligibility.  You think of faces half seen during your day.  The roar gets louder and you find yourself face to face with
 
 [[William Redbrook]]
 
 [[Nicholas Drayton]]
 
 [[Margaret Ashford]]
-
-[[Luciana Reyes]]
-
-[[Batbayarii AltanSetseg]]</tw-passagedata><tw-passagedata pid="17" name="Press 13" tags="" position="800,1100" size="100,100">You press the button marked 13, and head to your personal offices.  Hoping to catch up on some paperwork, you continue through the slightly unpleasant smell of carpet adhesive and sit behind your desk.
+background: spr_background</tw-passagedata><tw-passagedata pid="15" name="Press 13" tags="" position="800,1100" size="100,100">You press the button marked 13, and head to your personal offices.  Hoping to catch up on some paperwork, you continue through the slightly unpleasant smell of carpet adhesive and sit behind your desk.
 
 You can
 
@@ -56,11 +66,13 @@ You can
 
 or
 
-[[Fidget for a moment, putting off the tasks of the day]]</tw-passagedata><tw-passagedata pid="18" name="Press 4" tags="" position="800,1325" size="100,100">You head through the canteen on your way up to level 13 where your offices await you.  You&#39;re breakfast dulled the edge of hunger but you&#39;re still craving something.
+[[Fidget for a moment, putting off the tasks of the day]]
+background: spr_background</tw-passagedata><tw-passagedata pid="16" name="Press 4" tags="" position="800,1325" size="100,100">You head through the canteen on your way up to level 13 where your offices await you.  You&#39;re breakfast dulled the edge of hunger but you&#39;re still craving something.
 
 [[Grab a gooey cinnamon bun]]
 
-[[Grab a banana]]</tw-passagedata><tw-passagedata pid="19" name="Press R" tags="" position="800,875" size="100,100">You press R on the elevator to get some air.  After a brief existential whirr, the doors open on the roof of the building.  You step out, gulp a few mouthfuls of air and steel your nerves for the day.  As you&#39;re about to turn back to the elevators, you notice something.
+[[Grab a banana]]
+background: spr_background</tw-passagedata><tw-passagedata pid="17" name="Press R" tags="" position="800,875" size="100,100">You press R on the elevator to get some air.  After a brief existential whirr, the doors open on the roof of the building.  You step out, gulp a few mouthfuls of air and steel your nerves for the day.  As you&#39;re about to turn back to the elevators, you notice something.
 
 Do you
 
@@ -68,37 +80,48 @@ Do you
 
 or do you
 
-[[Focus on getting to the days work.]]</tw-passagedata><tw-passagedata pid="20" name="Take a cold shower" tags="" position="625,600" size="100,100">The ice in your veins meets the steely sting of the water.  You feel the adrenaline course its way into your limbs.  Your mind begins to wake up, shocked into resourcefulness by your masachistic routine.
+[[Focus on getting to the days work.]]
+background: spr_background</tw-passagedata><tw-passagedata pid="18" name="Take a cold shower" tags="" position="625,600" size="100,100">The ice in your veins meets the steely sting of the water.  You feel the adrenaline course its way into your limbs.  Your mind begins to wake up, shocked into resourcefulness by your masachistic routine.
 
 {gain 1 alertness point}
 
-[[Finish getting ready and eat some breakfast]]</tw-passagedata><tw-passagedata pid="21" name="Take a cold shower-battle" tags="" position="600,350" size="100,100">{battle cold shower demons}
+[[Finish getting ready and eat some breakfast]]
+background: spr_background</tw-passagedata><tw-passagedata pid="19" name="Take a cold shower-battle" tags="" position="600,350" size="100,100">{battle cold shower demons}
 
-[[Take a cold shower]]</tw-passagedata><tw-passagedata pid="22" name="Take a hot shower" tags="" position="450,350" size="100,100">You relax under the calming water, letting your anger at the world for existing melt like ice and flake off of you in layers.  Your jaw ucleanches.  You&#39;re not happy with today, but you&#39;re a little more ready for it.
+[[Take a cold shower]]
+background: spr_background</tw-passagedata><tw-passagedata pid="20" name="Take a hot shower" tags="" position="450,350" size="100,100">You relax under the calming water, letting your anger at the world for existing melt like ice and flake off of you in layers.  Your jaw ucleanches.  You&#39;re not happy with today, but you&#39;re a little more ready for it.
 
 {gain a resilience point}
 
 You towel off and sit on the bed, relaxing for just a moment... stretching out feels... so nice...
 
-[[Your alarm wakes you]]</tw-passagedata><tw-passagedata pid="23" name="Take advantage of the extra... ugh... hour" tags="" position="450,200" size="100,100">You groan, perhaps a bit dramatically, for no one&#39;s benefit.  You tumble your legs out of the bed, hoping peer pressure will rouse the rest of you.  Standing unsteadily, you blear your way to the bathroom, relieve yourself, and attempt to jump start your day.
+[[Your alarm wakes you]]
+background: spr_background</tw-passagedata><tw-passagedata pid="21" name="Take advantage of the extra... ugh... hour" tags="" position="450,200" size="100,100">You groan, perhaps a bit dramatically, for no one&#39;s benefit.  You tumble your legs out of the bed, hoping peer pressure will rouse the rest of you.  Standing unsteadily, you blear your way to the bathroom, relieve yourself, and attempt to jump start your day.
 
 [[Take a hot shower]]
 
-[[Take a cold shower-battle]]</tw-passagedata><tw-passagedata pid="24" name="This is a choice.  It goes to a passage with this title." tags="" position="300,0" size="100,100">[[Opening scene]]</tw-passagedata><tw-passagedata pid="25" name="William Redbrook" tags="" position="1500,500" size="100,100"></tw-passagedata><tw-passagedata pid="26" name="Your alarm wakes you" tags="" position="375,475" size="100,100">You jolt into reality.  Falling asleep again was a bad idea.
+[[Take a cold shower-battle]]
+background: spr_background</tw-passagedata><tw-passagedata pid="22" name="This is a choice.  It goes to a passage with this title." tags="" position="300,0" size="100,100">[[Opening scene]]
+background: spr_background</tw-passagedata><tw-passagedata pid="23" name="William Redbrook" tags="" position="1500,500" size="100,100">
+background: spr_background</tw-passagedata><tw-passagedata pid="24" name="Your alarm wakes you" tags="" position="375,475" size="100,100">You jolt into reality.  Falling asleep again was a bad idea.
 
 [[shake it off -- spend 1 resilience point]]
 
-[[proceed to &quot;have a day&quot;  -- lose one alertness point, gain status &#39;Having a day.&#39;]]</tw-passagedata><tw-passagedata pid="27" name="head to work." tags="" position="500,900" size="100,100">Your lab is abuzz with activity.  Somber Doctors and Engineers nod their heads to you in deference as you traverse the labarynth of hallways to your new office.  Which floor was it on again?  You board the elevator and...
+[[proceed to &quot;have a day&quot;  -- lose one alertness point, gain status &#39;Having a day.&#39;]]
+background: spr_background</tw-passagedata><tw-passagedata pid="25" name="head to work." tags="" position="500,900" size="100,100">Your lab is abuzz with activity.  Somber Doctors and Engineers nod their heads to you in deference as you traverse the labarynth of hallways to your new office.  Which floor was it on again?  You board the elevator and...
 
 [[Press 13]]
 
 [[Press 4]]
 
-[[Press R]]</tw-passagedata><tw-passagedata pid="28" name="proceed to &quot;have a day&quot;  -- lose one alertness point, gain status &#39;Having a day.&#39;" tags="" position="500,600" size="100,100">Alright.  Morning: tough.  Side of the bed: Wrong.  Day:  Having a.
+[[Press R]]
+background: spr_background</tw-passagedata><tw-passagedata pid="26" name="proceed to &quot;have a day&quot;  -- lose one alertness point, gain status &#39;Having a day.&#39;" tags="" position="500,600" size="100,100">Alright.  Morning: tough.  Side of the bed: Wrong.  Day:  Having a.
 
-[[Finish getting ready and eat some breakfast]]</tw-passagedata><tw-passagedata pid="29" name="shake it off -- spend 1 resilience point" tags="" position="375,600" size="100,100">You shudder, focus all your mental energy, and just decide to move on.
+[[Finish getting ready and eat some breakfast]]
+background: spr_background</tw-passagedata><tw-passagedata pid="27" name="shake it off -- spend 1 resilience point" tags="" position="375,600" size="100,100">You shudder, focus all your mental energy, and just decide to move on.
 
-[[Finish getting ready and eat some breakfast]]</tw-passagedata></tw-storydata>
+[[Finish getting ready and eat some breakfast]]
+background: spr_background</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
