features in progress: text box proportions, and graceful menu widths

--- a/Brainstorm_dump/story/story_files/TextAdventureGame.html
+++ b/Brainstorm_dump/story/story_files/TextAdventureGame.html
@@ -35,10 +35,10 @@ Take your banana back to the elevator and
 
 [[Run Away!]]
 
-/* rawContent */background: house_past, onOpen: {setFriend: [&quot;Margaret&quot;]}</tw-passagedata><tw-passagedata pid="10" name="Nicholas Drayton" tags="" position="1500,600" size="100,100">
+/* rawContent */background: house_past, character: MT_past_neutral, onOpen: {setFriend: [&quot;Margaret&quot;]}</tw-passagedata><tw-passagedata pid="10" name="Nicholas Drayton" tags="" position="1500,600" size="100,100">
 [[Run Away!]]
 
-/* rawContent */background: house_past, onOpen: {setFriend: [&quot;Nicholas&quot;]}</tw-passagedata><tw-passagedata pid="11" name="Opening scene" tags="" position="300,200" size="100,100">It&#39;s too early.  It&#39;s dark and it&#39;s quiet and it&#39;s warm but it&#39;s too early.  Your muffled thoughts slowly resolve themselves into enough clarity to question how long you have left... before your alarm.
+/* rawContent */background: house_past, character:ND_past_neutral, onOpen: {setFriend: [&quot;Nicholas&quot;]}</tw-passagedata><tw-passagedata pid="11" name="Opening scene" tags="" position="300,200" size="100,100">It&#39;s too early.  It&#39;s dark and it&#39;s quiet and it&#39;s warm but it&#39;s too early.  Your muffled thoughts slowly resolve themselves into enough clarity to question how long you have left... before your alarm.
 
 Too long.
 
@@ -102,7 +102,7 @@ You towel off and sit on the bed, relaxing for just a moment... stretching out f
 
 [[Run Away!]]
 
-/* rawContent */character: WB_past_neutral, background: house_past, onOpen: {setFriend: [&quot;William&quot;]}</tw-passagedata><tw-passagedata pid="21" name="Your alarm wakes you" tags="" position="375,475" size="100,100">You jolt into reality.  Falling asleep again was a bad idea.
+/* rawContent */character: WB_past_smile, background: house_past, onOpen: {setFriend: [&quot;William&quot;]}</tw-passagedata><tw-passagedata pid="21" name="Your alarm wakes you" tags="" position="375,475" size="100,100">You jolt into reality.  Falling asleep again was a bad idea.
 
 [[shake it off -- spend 1 resilience point]]
 
