--- a/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
+++ b/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
@@ -38,7 +38,7 @@ Too long.
 It&#39;s too early.
 [[Go back to bed]]
 [[Take advantage of the extra... ugh... hour.]]
-/* rawContent */background: spr_background, onLoad:{func: function test(_str){show_debug_message(_str)}, [&quot;test&quot;]</tw-passagedata><tw-passagedata pid="11" name="Press 13" tags="" position="725,1400" size="100,100">You press the button marked 13, and head to your personal offices.  Hoping to catch up on some paperwork, you continue through the offensive smell of carpet adhesive and sit behind your desk.
+/* rawContent */background: spr_background, onLoad:{func: function test(_str){show_debug_message(_str)}, [&quot;test&quot;]}</tw-passagedata><tw-passagedata pid="11" name="Press 13" tags="" position="725,1400" size="100,100">You press the button marked 13, and head to your personal offices.  Hoping to catch up on some paperwork, you continue through the offensive smell of carpet adhesive and sit behind your desk.
 [[Immediately get to work]]
 [[Fidget for a moment, putting off the tasks of the day]]
 /* rawContent */background: office_present</tw-passagedata><tw-passagedata pid="12" name="Press 4" tags="" position="900,975" size="100,100">You head through the canteen on your way up to level 13 where your offices await you.  You&#39;re breakfast dulled the edge of hunger but you&#39;re still craving something.
@@ -78,7 +78,7 @@ With terrible clarity, you realize: you&#39;re being pulled apart across time it
 /* rawContent */background: elevator_present</tw-passagedata><tw-passagedata pid="20" name="Head to the roof" tags="" position="1000,800" size="100,100">
 [[Press R]] 
 
-/* rawContent */background: elevator_present</tw-passagedata><tw-passagedata pid="21" name="Take a hot shower" tags="" position="825,425" size="100,100">You relax under the calming water, letting your anger at the world for existing melt like ice and flake off of you in layers.  Your jaw ucleanches.  You&#39;re not happy with today, but you&#39;re a little more ready for it.
+/* rawContent */background: elevator_present,onLoad{func: applyElevatorEffectsToBus, params:[master]}</tw-passagedata><tw-passagedata pid="21" name="Take a hot shower" tags="" position="825,425" size="100,100">You relax under the calming water, letting your anger at the world for existing melt like ice and flake off of you in layers.  Your jaw ucleanches.  You&#39;re not happy with today, but you&#39;re a little more ready for it.
 You towel off and sit on the bed, relaxing for just a moment... stretching out feels... so nice...
 
 [[Your alarm wakes you]]
