--- a/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
+++ b/Brainstorm_dump/story/story_files/Text Adventures of Argothon.html
@@ -12,43 +12,45 @@
 <tw-storydata name="Text Adventures of Argothon" startnode="10" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F178878C-385A-42DE-8889-5F82751CEA46" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="&#39;Have a day&#39;" tags="" position="575,675" size="100,100">Alright.  Morning: tough.  Side of the bed: Wrong.  Day:  Having a.
 
 [[Finish getting ready and eat some breakfast]]
-/* rawContent */background: house_present, onLoad:{ func:find, params: &quot;a day&quot;}</tw-passagedata><tw-passagedata pid="2" name="Fidget for a moment, putting off the tasks of the day" tags="" position="850,1525" size="100,100">TODO
-
-[[Temporal Storm]]
+/* rawContent */background: house_present, onLoad:{ func:find, params: &quot;a day&quot;}</tw-passagedata><tw-passagedata pid="2" name="Fidget for a moment, putting off the tasks of the day" tags="" position="850,1525" size="100,100">You arrange your desk, half convincing yourself you&#39;ll be more productive if everything is just so.  You haven&#39;t been productive in years.  So when the building shudders slightly, as though a truck was rumbling past your 13th story window, you notice immediately.  Maybe a quick phonecall down to ops to see if they want your in person input.  The phone rings twice before the building, and reality itself, fall apart in a [[Temporal Storm]].
 
 /* rawContent */background: office_present</tw-passagedata><tw-passagedata pid="3" name="Finish getting ready and eat some breakfast" tags="" position="700,800" size="100,100">You fuel your day, not really paying attention to your nourishment, just mindlessly consuming your morning&#39;s energy.  You gulp down a few good mouthfuls of bad coffee and [[head to work.]]
-/* rawContent */background: house_present</tw-passagedata><tw-passagedata pid="4" name="Focus on getting to the days work." tags="" position="1100,1225" size="100,100">[[Press 13]]
-/* rawContent */background: elevator_present</tw-passagedata><tw-passagedata pid="5" name="Go back to bed" tags="" position="700,425" size="100,100">You roll over, fold your pillow in half, hunker under your blanket, and try to recapture the magic of unconciousness.  Your fear begins to rise as you breathe slowly for an eternal five minutes, but you realize your thoughts are wandering.  You dream of a party you never attended.  Unfamiliar faces loom in and out of shadow, costumed waitstaff bringing drinks or food depending on when you look at them.  A celebra-- JANGLEJANGLEJANGLEDING.  JANGLEJANGLEJANGLEDING.
+/* rawContent */background: house_present</tw-passagedata><tw-passagedata pid="4" name="Focus on getting to the days work." tags="" position="1125,775" size="100,100">[[Press 13]]
+/* rawContent */background: elevator_present,onLoad:{func: addElevatorEffectsToBus,params:(global.musicBus)},</tw-passagedata><tw-passagedata pid="5" name="Go back to bed" tags="" position="700,425" size="100,100">You roll over, fold your pillow in half, hunker under your blanket, and try to recapture the magic of unconciousness.  Your fear begins to rise as you breathe slowly for an eternal five minutes, but you realize your thoughts are wandering.  You dream of a party you never attended.  Unfamiliar faces loom in and out of shadow, costumed waitstaff bringing drinks or food depending on when you look at them.  A celebra-- JANGLEJANGLEJANGLEDING.  JANGLEJANGLEJANGLEDING.
 
 [[Your alarm wakes you]]
-/* rawContent */background: house_present</tw-passagedata><tw-passagedata pid="6" name="Grab a banana" tags="" position="875,1225" size="100,100">This will bring a longing no food could fill closer to comfort.  You make a mental note to wrap the banana&#39;s peel in newspaper before throwing it out.  Your keen nose will be distracted all day if you don&#39;t. Take your banana back to the elevator and ...
+/* rawContent */background: house_present</tw-passagedata><tw-passagedata pid="6" name="Grab a banana" tags="" position="450,1100" size="100,100">This will bring a longing no food could fill closer to comfort.  You make a mental note to wrap the banana&#39;s peel in newspaper before throwing it out.  Your keen nose will be distracted all day if you don&#39;t. Take your banana back to the elevator and ...
 
 [[Press R]]
 [[Press 13]]
-/* rawContent */background: office_present,  onLoad: {func: find, params: [&quot;banana&quot;]}</tw-passagedata><tw-passagedata pid="7" name="Grab a gooey cinnamon bun" tags="" position="825,1075" size="100,100">This treat will hserve as external courage to face the day&#39;s work tasks.  You silently thank yourself for the private washroom in your new offices as you notice the small package smearing sugary deliciousness on your pinkie.  Stepping back into the empty elevator, you ... 
+/* rawContent */background: office_present,  onLoad: {func: find, params: [&quot;banana&quot;]}</tw-passagedata><tw-passagedata pid="7" name="Grab a gooey cinnamon bun" tags="" position="725,1075" size="100,100">This treat will hserve as external courage to face the day&#39;s work tasks.  You silently thank yourself for the private washroom in your new offices as you notice the small package smearing sugary deliciousness on your pinkie.  Stepping back into the empty elevator, you ... 
 
-[[Press R]]
-[[Press 13]]
-/* rawContent */background: office_present,  onLoad: {func: find, params: [&quot;cinnamonBun&quot;]}</tw-passagedata><tw-passagedata pid="8" name="Immediately get to work" tags="" position="725,1525" size="100,100">TODO
+[[Head to the roof]]
+[[Head to your offices]]
+/* rawContent */background: office_present,  onLoad: {func: find, params: [&quot;cinnamonBun&quot;]}</tw-passagedata><tw-passagedata pid="8" name="Immediately get to work" tags="" position="725,1525" size="100,100">You open your email and sigh deeply.  You used to be an inspired researcher.  Now you&#39;re just the top of a beuraucratic heap.  Highest view from a mountain of dirt.  You connect people who need to connect.  You give your vision of what direction the organization should take.
+You nearly sigh with relief when you&#39;re suddenly torn apart by an afternoon [[Temporal Storm]].
 
-[[Temporal Storm]]
+/* rawContent */background: office_present</tw-passagedata><tw-passagedata pid="9" name="Investigate the shiny object you notice out of the corner of your eye?" tags="" position="1125,1150" size="100,100">You pause for a moment, happy for an excuse to put off the day&#39;s work.  You reach down for the scuffed metal object, notice it&#39;s a large brass key.  The antique object is worn to brushed shininess in two places.  The part where...  Is it suddenly really warm?  The part where it would be held, and the whatever, the the the thing the blade of the key is old timey and why is it hard to see and think of word for th wher
 
-/* rawContent */background: office_present</tw-passagedata><tw-passagedata pid="9" name="Investigate the shiny object you notice out of the corner of your eye?" tags="" position="1012.5,1100" size="100,100"></tw-passagedata><tw-passagedata pid="10" name="It&#39;s too early." tags="" position="700,300" size="100,100">The palm trees abruptly dim. It&#39;s too early. It&#39;s dark and it&#39;s quiet and it&#39;s warm but it&#39;s too early. Your muffled thoughts slowly resolve themselves into enough clarity to question how long you have left... before your alarm.
+[[Pass out]]
+/* rawContent */background: outside_present</tw-passagedata><tw-passagedata pid="10" name="It&#39;s too early." tags="" position="700,300" size="100,100">The palm trees abruptly dim.
+
+It&#39;s too early. It&#39;s dark and it&#39;s quiet and it&#39;s warm but it&#39;s too early. Your muffled thoughts slowly resolve themselves into enough clarity to question how long you have left... before your alarm.
 Too long.
 It&#39;s too early.
 [[Go back to bed]]
 [[Take advantage of the extra... ugh... hour.]]
-/* rawContent */background: spr_background, onLoad:{func: function test(_str){show_debug_message(_str)}, [&quot;test&quot;]}</tw-passagedata><tw-passagedata pid="11" name="Press 13" tags="" position="725,1400" size="100,100">You press the button marked 13, and head to your personal offices.  Hoping to catch up on some paperwork, you continue through the offensive smell of carpet adhesive and sit behind your desk.
+/* rawContent */background: spr_background, onLoad:{func: function test(_str){show_debug_message(_str)}, [&quot;test&quot;]}</tw-passagedata><tw-passagedata pid="11" name="Press 13" tags="" position="1150,925" size="100,100">You press the button marked 13, and head to your personal offices.  Hoping to catch up on some paperwork, you continue through the offensive smell of carpet adhesive and sit behind your desk.
 [[Immediately get to work]]
 [[Fidget for a moment, putting off the tasks of the day]]
-/* rawContent */background: office_present</tw-passagedata><tw-passagedata pid="12" name="Press 4" tags="" position="900,975" size="100,100">You head through the canteen on your way up to level 13 where your offices await you.  You&#39;re breakfast dulled the edge of hunger but you&#39;re still craving something.
+/* rawContent */background: office_present,onLoad:{func: removeElevatorEffectsFromBus,params:(global.musicBus)}</tw-passagedata><tw-passagedata pid="12" name="Press 4" tags="" position="875,925" size="100,100">You head through the canteen on your way up to level 13 where your offices await you.  You&#39;re breakfast dulled the edge of hunger but you&#39;re still craving something.
 
 [[Grab a gooey cinnamon bun]]
 
 [[Grab a banana]]
-/* rawContent */background: office_present</tw-passagedata><tw-passagedata pid="13" name="Press R" tags="" position="1075,925" size="100,100">You press R on the elevator to get some air.  After a brief existential whirr, the doors open on the roof of the building.  You step out, gulp a few mouthfuls of air and steel your nerves for the day.  As you&#39;re about to turn back to the elevators, you notice something.  Do you  [[Investigate the shiny object you notice out of the corner of your eye?]]  or do you  [[Focus on getting to the days work.]]
+/* rawContent */background: office_present,onLoad:{func: removeElevatorEffectsFromBus,params:(global.musicBus)}</tw-passagedata><tw-passagedata pid="13" name="Press R" tags="" position="1025,925" size="100,100">You press R on the elevator to get some air.  After a brief existential whirr, the doors open on the roof of the building.  You step out, gulp a few mouthfuls of air and steel your nerves for the day.  As you&#39;re about to turn back to the elevators, you notice something.  Do you  [[Investigate the shiny object you notice out of the corner of your eye?]]  or do you  [[Focus on getting to the days work.]]
 
-/* rawContent */background: outside_present</tw-passagedata><tw-passagedata pid="14" name="Shake it off." tags="" position="700,675" size="100,100">You shudder, focus all your mental energy, and just decide to move on.
+/* rawContent */background: outside_present,onLoad:{func: removeElevatorEffectsFromBus,params:(global.musicBus)}</tw-passagedata><tw-passagedata pid="14" name="Shake it off." tags="" position="700,675" size="100,100">You shudder, focus all your mental energy, and just decide to move on.
 [[Finish getting ready and eat some breakfast]]
 /* rawContent */background: house_present, onLoad:{playerTakeDamage(10)}</tw-passagedata><tw-passagedata pid="15" name="Take advantage of the extra... ugh... hour." tags="" position="825,300" size="100,100">You groan, perhaps a bit dramatically, for no one&#39;s benefit.  You tumble your legs out of the bed, hoping peer pressure will rouse the rest of you.  Standing unsteadily, you blear your way to the bathroom, relieve yourself, and attempt to jump start your day.
 
@@ -57,41 +59,43 @@ It&#39;s too early.
 [[Take a cold shower]]
 /* rawContent */background: house_present</tw-passagedata><tw-passagedata pid="16" name="Temporal Storm" tags="" position="725,1650" size="100,100">Reality seems to fold in on itself around you.
 
-You try to scream but no sound emerges. Your body feels simultaneously compressed and stretched, as if existing in multiple places at once.
+You try to scream but no sound emerges. Your body feels simultaneously compressed and stretched, as if every cell is suddenly being pulled in every direction.
 
 Through the haze of agony, you catch glimpses—London streets, your office, places you&#39;ve never seen—all superimposed like multiple exposures on a single photograph.
 
-With terrible clarity, you realize: you&#39;re being pulled apart across time itself.
+With terrible clarity, you realize you&#39;re being pulled apart across time itself.
 
-/* rawContent */onLoad: {func: theEnd, params: [&quot;tragic&quot;]}</tw-passagedata><tw-passagedata pid="17" name="Your alarm wakes you" tags="" position="700,550" size="100,100">You jolt into reality.  Falling asleep again was a bad idea.
+/* rawContent */background: spr_chaos, onLoad: {func: theEnd, params: [&quot;tragic&quot;]}</tw-passagedata><tw-passagedata pid="17" name="Your alarm wakes you" tags="" position="700,550" size="100,100">You jolt into reality.  Falling asleep again was a bad idea.
 [[Shake it off.]]
 [[&#39;Have a day&#39;]]
-/* rawContent */background: house_present</tw-passagedata><tw-passagedata pid="18" name="head to work." tags="" position="700,925" size="100,100">Your lab is abuzz with activity.  Somber Doctors and Engineers nod their heads to you in deference as you traverse the labarynth of hallways to your new office.  Which floor was it on again?  You board the elevator and...
+/* rawContent */background: house_present</tw-passagedata><tw-passagedata pid="18" name="head to work." tags="" position="525,950" size="100,100">Your lab is abuzz with activity.  Somber Doctors and Engineers nod their heads to you in deference as you traverse the labarynth of hallways to your new office.  Which floor was it on again?  You board the elevator and...
 
 [[Head to your offices]]
 
 [[Visit the canteen]] or 
 
 [[Head to the roof]]
-/* rawContent */background: office_present</tw-passagedata><tw-passagedata pid="19" name="Visit the canteen" tags="" position="725,1100" size="100,100">[[Press 4]] 
+/* rawContent */background: office_present</tw-passagedata><tw-passagedata pid="19" name="Visit the canteen" tags="" position="850,750" size="100,100">[[Press 4]] 
 
-/* rawContent */background: elevator_present</tw-passagedata><tw-passagedata pid="20" name="Head to the roof" tags="" position="1000,800" size="100,100">
+/* rawContent */background: elevator_present, onLoad:{func: addElevatorEffectsToBus,params:(global.musicBus)}</tw-passagedata><tw-passagedata pid="20" name="Head to the roof" tags="" position="1000,775" size="100,100">
 [[Press R]] 
 
-/* rawContent */background: elevator_present,onLoad{func: applyElevatorEffectsToBus, params:[master]}</tw-passagedata><tw-passagedata pid="21" name="Take a hot shower" tags="" position="825,425" size="100,100">You relax under the calming water, letting your anger at the world for existing melt like ice and flake off of you in layers.  Your jaw ucleanches.  You&#39;re not happy with today, but you&#39;re a little more ready for it.
+/* rawContent */background: elevator_present,onLoad:{func: addElevatorEffectsToBus,params:(global.musicBus)}</tw-passagedata><tw-passagedata pid="21" name="Take a hot shower" tags="" position="825,425" size="100,100">You relax under the calming water, letting your anger at the world for existing melt like ice and flake off of you in layers.  Your jaw ucleanches.  You&#39;re not happy with today, but you&#39;re a little more ready for it.
 You towel off and sit on the bed, relaxing for just a moment... stretching out feels... so nice...
 
 [[Your alarm wakes you]]
-/* rawContent */background: house_present, onLoad:{func: find, params:[&quot;resilience&quot;]}</tw-passagedata><tw-passagedata pid="22" name="Take a cold shower, continued" tags="" position="975,500" size="100,100">The ice in your veins meets the steely sting of the water.  You feel the adrenaline course its way into your limbs.  Your mind begins to wake up, shocked into resourcefulness by your masochistic routine.
+/* rawContent */background: house_present, onLoad:{func: find, params:[&quot;resilience&quot;]}</tw-passagedata><tw-passagedata pid="22" name="Take a cold shower, continued" tags="" position="975,525" size="100,100">The ice in your veins meets the steely sting of the water.  You feel the adrenaline course its way into your limbs.  Your mind begins to wake up, shocked into resourcefulness by your masochistic routine.
 
 [[Finish getting ready and eat some breakfast]] 
 
 /* rawContent */background: house_present, onLoad:{func: find, params:[&quot;resolve&quot;]}</tw-passagedata><tw-passagedata pid="23" name="Take a cold shower" tags="" position="975,325" size="100,100">Battle the your demons
 
 [[Take a cold shower, continued]]
-/* rawContent */background: house_present, onLoad:{func: fight, params: &quot;coldDemons&#39;}</tw-passagedata><tw-passagedata pid="24" name="Head to your offices" tags="" position="575,1300" size="100,100">[[Press 13]] 
+/* rawContent */background: house_present, onLoad:{func: fight, params: &quot;coldDemons&#39;}</tw-passagedata><tw-passagedata pid="24" name="Head to your offices" tags="" position="925,1075" size="100,100">[[Press 13]] 
 
-/* rawContent */background: office_present, onLoad:{func: applyElevatorEffectsToBus, params:[]}</tw-passagedata></tw-storydata>
+/* rawContent */background: office_present, onLoad:{func: addElevatorEffectsToBus,params:(global.musicBus)},</tw-passagedata><tw-passagedata pid="25" name="Untitled Passage" tags="" position="1050,650" size="100,100">onLoad:{func: removeElevatorEffectsFromBus,params:(global.musicBus)},
+
+onLoad:{func: addElevatorEffectsToBus,params:(global.musicBus)},</tw-passagedata><tw-passagedata pid="26" name="Pass out" tags="" position="1125,1275" size="100,100"></tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
